--- a/client/aprendendo_indexeddb.html
+++ b/client/aprendendo_indexeddb.html
@@ -49,6 +49,38 @@
             };
         }
 
+
+        function listaTodas() {
+            let tx = connection.transaction(['negociacoes'],'readwrite'); 
+
+            let store  = tx.objectStore('negociacoes');
+
+            let cursor = store.openCursor();
+
+            let negociacoes = [];
+
+            cursor.onsuccess = (event)=>{
+
+                let atual = event.target.result;
+
+                if(atual){
+
+                    let dado = atual.value;
+
+                    negociacoes.push(new Negociacao(dado._data, dado._quantidade, dado._valor));
+
+                    atual.continue();
+                }else{
+                    console.log(negociacoes);
+                }
+            };
+
+            cursor.onerror = (event)=>{
+                console.log(event.target.error.name);
+            };
+
+        }
+
     </script>
 </body>
 </html>
