Aula_4 ['#4 - Importando negociações automaticamente'].

--- a/client/index.html
+++ b/client/index.html
@@ -36,9 +36,9 @@
     </form>
     
     <div class="text-center">
-        <button onclick="negociacaoController.importarNegociacoes()" class="btn btn-primary text-center" type="button">
+        <!--<button onclick="negociacaoController.importarNegociacoes()" class="btn btn-primary text-center" type="button">
             Importar Negociações
-        </button>
+        </button>-->
         <button class="btn btn-primary text-center" type="button"  onclick="negociacaoController.esvaziarLista()">
             Apagar
         </button>
