--- a/client/index.html
+++ b/client/index.html
@@ -51,7 +51,18 @@
 
 </body>
 
- <script src="js/app/models/Negociacao.js"></script>
+ <script src="node_modules/systemjs/dist/system.js"></script>
+
+ <script>
+    System.defaultJSExtensions = true; //omitir extensões(.js)
+
+    //Primeiro módulo a ser carregado 
+    System.import('js/app/boot').catch(function(err){
+        console.error(err);
+    });
+</script>
+
+ <!--<script src="js/app/models/Negociacao.js"></script>
  <script src="js/app/helpers/DateHelper.js"></script>
  <script src="js/app/controllers/NegociacaoController.js"></script>
  <script src="js/app/models/ListaNegociacoes.js"></script>
@@ -65,9 +76,9 @@
  <script src="js/app/services/NegociacaoService.js"></script>
  <script src="js/app/services/ConnectionFactory.js"></script>
  <script src="js/app/dao/NegociacaoDao.js"></script>
- <script>
+ <script>->
      var negociacaoController = new NegociacaoController();
- </script>
+ </script>-->
 
 
 </html>
