Aula_7 ['#5 - O módulo boot.js'].

--- a/client/index.html
+++ b/client/index.html
@@ -15,7 +15,7 @@
 
     <!-- Se o Angular pode ligar um evento ao controller in-line por que 
     eu também não poderia? Me julgue. -->
-    <form class="form" onsubmit="negociacaoController.adiciona(event)">
+    <form class="form">
         
         <div class="form-group">
             <label for="data">Data</label>
@@ -39,7 +39,7 @@
         <!--<button onclick="negociacaoController.importarNegociacoes()" class="btn btn-primary text-center" type="button">
             Importar Negociações
         </button>-->
-        <button class="btn btn-primary text-center" type="button"  onclick="negociacaoController.esvaziarLista()">
+        <button class="btn btn-primary text-center" type="button">
             Apagar
         </button>
     </div> 
